--- a/chapter01.tex
+++ b/chapter01.tex
@@ -152,7 +152,7 @@ The result of \textbf{mapping}, as tacit knowledge, is a processing that gives u
 
 An easy way to understand the importance of mapping and localization, imagine the following situation: we have a map in our hands (provided by the environment \textit{mapping}) and we know exactly where we are in this map (by \textit{localization}), what would be the result of moving in this environment blind folded? Not good.
 
-\textbf{Detection} is the action of evaluate the existance an object in the scene, can be anything that is relevant for the scene understanding. The \textbf{tracking} consist in follow the subsequent poses assumed by the detected object during a certain amount of time. The term \textit{tracking} is usually applied with the full meaning of \textit{tracking of moving objects}\cite{Wang04a} or even \textit{moving object tracking}, but those terms can be used in alternating manner in this document with exactly the same meaning.
+\textbf{Detection} is the action of evaluate the existence an object in the scene, can be anything that is relevant for the scene understanding. The \textbf{tracking} consist in follow the subsequent poses assumed by the detected object during a certain amount of time. The term \textit{tracking} is usually applied with the full meaning of \textit{tracking of moving objects}\cite{Wang04a} or even \textit{moving object tracking}, but those terms can be used in alternating manner in this document with exactly the same meaning.
 
 \paragraph{The perception process} is a general environment perception scheme is represented in the Figure \ref{fig:perception:cycle}, it requires at least two inputs: the perception measurements $Z$ which are usually provided by exteroceptive sensors like laser scanners, and the vehicle motion measurements $U$ that are obtained from proprioceptive sensors, like for instance an inertial measurement unit.
 
