--- a/trunk/abstract.tex
+++ b/trunk/abstract.tex
@@ -14,5 +14,13 @@ collisions pour un v\'ehicule intelligent.
 Parmi les m\'ethodes de repr\'esentation de l'environnement d'un robot, la grille d'occupation locale est populaire car elle permet une description pr\'ecise et efficace. Cependant, elle inclut g\'en\'eralement les parties statiques de l'environnement (b\^atiments, murs,\dots). Diverses m\'ethodes ont \'et\'e propos\'ees pour s\'eparer la partie dynamique de l'environnement de sa partie statique, g\'en\'eralement fond\'ees sur une cartographie globale de l'environnement. Cela suppose une estimation complexe de nombreuses variables. Dans ce document, nous proposons une m\'ethode permettant de r\'ealiser une telle segmentation en utilisant le plus petit nombre possible d'observations, dans le cadre des grilles d'occupation. L'algorithme propos\'e fonctionne en temps r\'eel, tout en fournissant des r\'esultats prometteurs sur des donn\'ees routi\`eres r\'eelles. L'objectif \`a plus long t\`erme est d'appliquer cette m\'ethode dans le cadre du Filtre d'Occupation Bay\'esien, pour le d\'eveloppement de futures syst\`emes d'aide \`a la conduite. 
 \end{abstract}
 
+\pagebreak
 
+\renewcommand{\abstractname}{Acknowledgements}
+
+\begin{abstract}
+
+I would like to thank Qadeer Baig for the continuous support and guidance during this work, including lunch time discussion on robotics subjects. Mathias Perrollaz for the opportunity to work in the E-Motion team, and for the productive brainstorms and insights. Thank both of them for the tough review on the draft version of this document. Last but not least, i would like to thank the team E-Motion itself, and the ones that are responsible for maintaning this group, turning the wheels in the backstage, and pushing us further. Thank you.
+
+\end{abstract}
 
