--- a/trunk/chapter01.tex
+++ b/trunk/chapter01.tex
@@ -8,11 +8,11 @@ In this document we are mainly concerned about driving assistance systems. Such 
 \item tactile alerts (also known as haptics\cite{riener2010sensor})
 \end{itemize}
 
-Driving support systems may also provide support in a less passive manner as well:
+Driving support systems may also provide support in a less passive manner, by:
 
 \begin{itemize}
-\item change how the car responds to the drivers commands for assisting a maneuver
-\item change how the car behaves, with partial or fully automatic command
+\item changing how the car responds to the drivers commands for assisting a maneuver
+\item changing how the car behaves, with partial or fully automatic command
 \end{itemize}
 
 This field has gained several adepts. Automotive industry and researchers are studying it thoroughly these days.
